# pumpfun-bot

./: .gitignore  Cargo.toml  config.toml
src/: ai_generator.rs  app_flags.rs  config.rs  initial_buy.rs  main.rs  monitoring.rs  pumpfun.rs  sell.rs  trend_fetcher.rs
src/utils/: mod.rs  wallet_manager.rs  wash_price.rs
