[package]
name = "pumpfun-bot"
version = "0.1.0"
edition = "2024"


[dependencies]
mpl-token-metadata = "4"
solana-sdk = "1.18.22"
solana-client = "1.18.22"
solana-program = "1.18.22"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
spl-token-2022 = "0.9.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bs58 = "0.5"
serde_json = "1.0"
borsh = "0.10.4"
borsh-derive = "0.10.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }





# Remove or pin reqwest to a compatible version if you added it
# For now, comment it out or remove it completely (we don't need it yet)
# reqwest = { version = "0.12", features = ["json"] }